# karabiner-rcmd-binder

./: .gitignore  AGENTS.md  BROWSER-EXAMPLES.md  BROWSER-SUPPORT.md  CHANGELOG.md  Cargo.toml  GPG-PUBLIC-KEY.asc  KEYBINDINGS.md  LICENSE  Makefile  PUBLISHING.md  QUICKSTART.md  README.md  TROUBLESHOOTING-APPS.md  example-config.toml  install.sh  run.sh
docs/: GPG-KEY-MANAGEMENT.md  GPG-VERIFICATION.md
knowledge/bigpicture/: BIGPICTURE.md  PLAN.md
knowledge/coding/: CODING.md
knowledge/domain/: DOMAIN.md
knowledge/session/: session-2025-01-24-dynamic-discovery.md  session-2025-01-27-bundle-id-cleanup.md
scripts/: package.sh  release.sh  setup-gpg.sh  sign.sh  update-formula.sh
src/: app.rs  app_discovery.rs  keycodes.rs  main.rs  validation.rs
src/config/: mod.rs  model.rs  persistence.rs
src/karabiner/: backup.rs  generator.rs  mod.rs
src/scripts/: mod.rs
src/ui/: bindings.rs  editor.rs  layout.rs  mod.rs  settings.rs
