[package]
name = "karabiner-switch-key"
version = "0.1.0"
edition = "2021"
description = "TUI for configuring Karabiner-Elements right_command key bindings"
license = "MIT"
repository = "https://github.com/user/karabiner-switch-key"

[dependencies]
ratatui = "0.30"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
anyhow = "1"
glob = "0.3"
chrono = "0.4"
